# shredder

./: .gitignore  AUTHORS  NEWS  README  configure.ac
include/: shredder.h  systrayicon.h
src/: Makefile.am  icon.xpm  registry.reg  shredder.cpp
src/tbtest/: Makefile.am  tbtest  tbtest.cpp
